Adjust hyphens and word-wrap. Fixes #1360
Previous attempt:
https://github.com/projectblacklight/blacklight/commit/db79389398679f2f7e88b05c77d9c58633b90104

--- a/app/assets/stylesheets/blacklight/_facets.scss
+++ b/app/assets/stylesheets/blacklight/_facets.scss
@@ -68,17 +68,8 @@
   }
 
   @mixin hyphens-auto {
-    // breaks long words apart so they don't cause the containing div to
-    // be too big, also fix hypenation
-    -ms-word-break: keep-all;
-    word-break: keep-all;
-
-    // Non standard for webkit
-    word-break: break-word;
-
+    overflow-wrap: break-word;
     -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
     -o-hyphens: auto;
     hyphens: auto;
   }
